# electric_toy_car

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml
.cargo/: config.toml
.github/skills/solid-coding-style/: SKILL.md
.github/workflows/: pitwall.yml
common_comms/: Cargo.toml
common_comms/src/: espnow.rs  frame.rs  keepalive.rs  lib.rs  pairing.rs  protocol.rs
common_host_proto/: Cargo.toml
common_host_proto/src/: lib.rs
common_led/: Cargo.toml
common_led/src/: lib.rs
controller/: Cargo.toml
controller/src/: board.rs  config.rs  esp_now_transport.rs  joystick.rs  main.rs  usb_link.rs
docs/: callibration_measurement.ods  current-sense-calibration.md  espnow-shared-protocol.md
host_tool/: Cargo.toml
host_tool/.cargo/: config.toml
host_tool/src/: main.rs
pitwall/: Cargo.toml  README.md
pitwall/src/: app.rs  command.rs  main.rs  serial.rs  ui.rs
vehicle/: Cargo.toml  build.rs
vehicle/src/: board.rs  config.rs  current.rs  drive.rs  esp_now_transport.rs  hbridge.rs  ibt2.rs  l298n.rs  main.rs  motor.rs  pairing.rs  usb_link.rs
