[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
common_comms = { path = "../common_comms" }
common_led = { path = "../common_led" }
esp-hal = { version = "1.1.1", features = [ "esp32c6",  "unstable" ] }
esp-backtrace = { version = "0.19.0", features = [
    "esp32c6",
    
    "panic-handler",
    "println",
] }
esp-println = { version = "0.17.0", features = ["esp32c6", "log-04"] }
log = { version = "0.4.21" }
esp-alloc = "0.10.0"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32c6"] }
embassy-executor = "0.10"
embassy-time = "0.5"
esp-rtos = { version = "0.3", features = ["embassy", "esp32c6"] }
