[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
common_comms = { path = "../common_comms" }
common_led = { path = "../common_led" }
common_host_proto = { path = "../common_host_proto" }
embassy-sync = "0.7"
embassy-futures = "0.1"
embedded-io-async = "0.6"
esp-hal = { version = "1.0.0", features = [ "esp32c6",  "unstable" ] }
esp-backtrace = { version = "0.19.0", features = [
    "esp32c6",
    
    "panic-handler",
    "println",
] }
esp-println = { version = "0.17.0", features = ["esp32c6", "log-04"] }
log = { version = "0.4.21" }
esp-alloc = "0.10.0"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }
embassy-executor = "0.9"
embassy-time = "0.5"
esp-rtos = { version = "0.2", features = ["embassy", "esp32c6", "esp-radio"] }
esp-radio = { git = "https://github.com/esp-rs/esp-hal", tag = "esp-hal-v1.0.0", package = "esp-radio", default-features = false, features = ["esp32c6", "esp-now", "unstable", "wifi"] }
