[package]
name = "vehicle"
version = "0.1.0"
edition = "2021"

[dependencies]
common_led = { path = "../common_led" }
esp-hal = { version = "1.1.1", features = [ "esp32c6", "unstable" ] }
esp-backtrace = { version = "0.19.0", features = [
    "esp32c6",
    
    "panic-handler",
    "println",
] }
esp-println = { version = "0.17.0", features = ["esp32c6", "log-04"] }
log = { version = "0.4.21" }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32c6"] }
