[package]
name = "vehicle"
version = "0.1.0"
edition = "2021"

[dependencies]
common_comms = { path = "../common_comms" }
common_led = { path = "../common_led" }
esp-hal = { version = "1.0.0", features = [ "esp32c6", "unstable" ] }
esp-alloc = "0.10.0"
esp-backtrace = { version = "0.19.0", features = [
    "esp32c6",
    
    "panic-handler",
    "println",
] }
esp-println = { version = "0.17.0", features = ["esp32c6", "log-04"] }
log = { version = "0.4.21" }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }
esp-rtos = { version = "0.2", features = ["embassy", "esp32c6", "esp-radio"] }
embassy-executor = "0.9"
embassy-time = "0.5"
esp-radio = { git = "https://github.com/esp-rs/esp-hal", tag = "esp-hal-v1.0.0", package = "esp-radio", default-features = false, features = ["esp32c6", "esp-now", "unstable", "wifi"] }
